<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/videoViewLayout"
        android:layout_width="380dp"
        android:layout_height="260dp"
        android:layout_gravity="center"
        android:layout_margin="22dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.dailymotion.android.player.sdk.PlayerWebView
            android:id="@+id/dm_player_web_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.dailymotion.android.player.sdk.PlayerWebView>
    </RelativeLayout>

    <TextView
        android:id="@+id/qualityControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/quality"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/videoViewLayout"
        app:layout_constraintTop_toBottomOf="@+id/play" />

    <Button
        android:id="@+id/q380"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/q380"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/qualityControl"
        app:layout_constraintTop_toBottomOf="@+id/qualityControl" />

    <Button
        android:id="@+id/q480"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/q480"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/q380"
        app:layout_constraintTop_toTopOf="@+id/q380" />

    <Button
        android:id="@+id/q720"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/q720"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/q480"
        app:layout_constraintTop_toTopOf="@+id/q480" />

    <Button
        android:id="@+id/q1080"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/q1080"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/q720"
        app:layout_constraintTop_toTopOf="@+id/q720" />

    <TextView
        android:id="@+id/currentQuality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/q380"
        app:layout_constraintTop_toBottomOf="@+id/q380"
        tools:text="Current quality" />

    <TextView
        android:id="@+id/videoInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/info"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/playerControl"
        app:layout_constraintTop_toBottomOf="@+id/currentQuality" />

    <Button
        android:id="@+id/videoLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/length"
        app:layout_constraintStart_toStartOf="@+id/videoInfo"
        app:layout_constraintTop_toBottomOf="@+id/videoInfo" />

    <TextView
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/timezero"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/videoLength"
        app:layout_constraintStart_toEndOf="@+id/videoLength"
        app:layout_constraintTop_toTopOf="@+id/videoLength" />

    <Button
        android:id="@+id/currentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current"
        app:layout_constraintStart_toStartOf="@+id/q720"
        app:layout_constraintTop_toTopOf="@+id/videoLength" />

    <TextView
        android:id="@+id/current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/timezero"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/currentTime"
        app:layout_constraintStart_toEndOf="@+id/currentTime"
        app:layout_constraintTop_toTopOf="@+id/currentTime" />

    <TextView
        android:id="@+id/playerControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/player"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/videoViewLayout"
        app:layout_constraintTop_toBottomOf="@+id/videoViewLayout" />

    <Spinner
        android:id="@+id/videoselector"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/load"
        app:layout_constraintEnd_toEndOf="@+id/unmute"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pause"
        app:layout_constraintTop_toTopOf="@+id/load" />

    <Button
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/load"
        app:layout_constraintStart_toStartOf="@+id/playerControl"
        app:layout_constraintTop_toBottomOf="@+id/playerControl" />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/play"
        app:layout_constraintStart_toStartOf="@+id/playerControl"
        app:layout_constraintTop_toBottomOf="@+id/videoselector" />

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/pause"
        app:layout_constraintStart_toEndOf="@+id/play"
        app:layout_constraintTop_toTopOf="@+id/play" />

    <Button
        android:id="@+id/mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mute"
        app:layout_constraintStart_toEndOf="@+id/pause"
        app:layout_constraintTop_toTopOf="@+id/pause" />

    <Button
        android:id="@+id/unmute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/unmute"
        app:layout_constraintStart_toEndOf="@+id/mute"
        app:layout_constraintTop_toTopOf="@+id/mute" />

</androidx.constraintlayout.widget.ConstraintLayout>